--- a/src/main/resources/templates/hocsinh_ketquahoctap.html
+++ b/src/main/resources/templates/hocsinh_ketquahoctap.html
@@ -38,7 +38,7 @@
                                         <tr>
                                             <th>Môn học</th>
                                             <th>Điểm</th>
-                                            <th>Nhận xét của giáo viên</th>
+                                            <th>Nhận xét</th>
                                         </tr>
                                     </thead>
                                     <tbody>
