--- a/src/main/resources/templates/hocsinh_thoikhoabieu.html
+++ b/src/main/resources/templates/hocsinh_thoikhoabieu.html
@@ -35,12 +35,9 @@
                             <li class="list-group-item heading">
                                 <h1>Thứ Hai</h1>
                             </li>
-                            <li class="list-group-item"><span>5 Gb Disk Space</span></li>
-                            <li class="list-group-item"><span>1 Gb Dadicated Ram</span></li>
-                            <li class="list-group-item"><span>10 Addon Domain</span></li>
-                            <li class="list-group-item"><span>10 Email Account</span></li>
-                            <li class="list-group-item"><span>24/7 Support</span></li>
-                            <li class="list-group-item plan-action"></li>
+        					<li class="list-group-item" th:each="tkb : ${tkb_thu2}">
+								<span th:text="${tkb.getMonhoc_name()}"></span>
+							</li>
                         </ul>
                     </div>
                     <div class="col-sm-4 plan price green wow fadeInDown">
@@ -48,12 +45,9 @@
                             <li class="list-group-item heading">
                                 <h1>Thứ Ba</h1>
                             </li>
-                            <li class="list-group-item"><span>10 Gb Disk Space</span></li>
-                            <li class="list-group-item"><span>2 Gb Dadicated Ram</span></li>
-                            <li class="list-group-item"><span>20 Addon Domain</span></li>
-                            <li class="list-group-item"><span>20 Email Account</span></li>
-                            <li class="list-group-item"><span>24/7 Support</span></li>
-                            <li class="list-group-item plan-action"></li>
+        					<li class="list-group-item" th:each="tkb : ${tkb_thu3}">
+								<span th:text="${tkb.getMonhoc_name()}"></span>
+							</li>
                         </ul>
                     </div>
                     <div class="col-sm-4 plan price yellow wow fadeInDown">
@@ -61,12 +55,9 @@
                             <li class="list-group-item heading">
                                 <h1>Thứ Tư</h1>
                             </li>
-                            <li class="list-group-item"><span>50 Gb Disk Space</span></li>
-                            <li class="list-group-item"><span>8 Gb Dadicated Ram</span></li>
-                            <li class="list-group-item"><span>Unlimited Addon Domain</span></li>
-                            <li class="list-group-item"><span>Unlimited Email Account</span></li>
-                            <li class="list-group-item"><span>24/7 Support</span></li>
-                            <li class="list-group-item plan-action"></li>
+        					<li class="list-group-item" th:each="tkb : ${tkb_thu4}">
+								<span th:text="${tkb.getMonhoc_name()}"></span>
+							</li>
                         </ul>
                     </div>
                     <div class="col-sm-4 plan price red wow fadeInDown">
@@ -74,12 +65,9 @@
                             <li class="list-group-item heading">
                                 <h1>Thứ Năm</h1>
                             </li>
-                            <li class="list-group-item"><span>5 Gb Disk Space</span></li>
-                            <li class="list-group-item"><span>1 Gb Dadicated Ram</span></li>
-                            <li class="list-group-item"><span>10 Addon Domain</span></li>
-                            <li class="list-group-item"><span>10 Email Account</span></li>
-                            <li class="list-group-item"><span>24/7 Support</span></li>
-                            <li class="list-group-item plan-action"></li>
+        					<li class="list-group-item" th:each="tkb : ${tkb_thu5}">
+								<span th:text="${tkb.getMonhoc_name()}"></span>
+							</li>
                         </ul>
                     </div>
                     <div class="col-sm-4 plan price green wow fadeInDown">
@@ -87,12 +75,9 @@
                             <li class="list-group-item heading">
                                 <h1>Thứ Sáu</h1>
                             </li>
-                            <li class="list-group-item"><span>10 Gb Disk Space</span></li>
-                            <li class="list-group-item"><span>2 Gb Dadicated Ram</span></li>
-                            <li class="list-group-item"><span>20 Addon Domain</span></li>
-                            <li class="list-group-item"><span>20 Email Account</span></li>
-                            <li class="list-group-item"><span>24/7 Support</span></li>
-                            <li class="list-group-item plan-action"></li>
+        					<li class="list-group-item" th:each="tkb : ${tkb_thu6}">
+								<span th:text="${tkb.getMonhoc_name()}"></span>
+							</li>
                         </ul>
                     </div>
                     <div class="col-sm-4 plan price yellow wow fadeInDown">
@@ -100,12 +85,9 @@
                             <li class="list-group-item heading">
                                 <h1>Thứ Bảy</h1>
                             </li>
-                            <li class="list-group-item"><span>50 Gb Disk Space</span></li>
-                            <li class="list-group-item"><span>8 Gb Dadicated Ram</span></li>
-                            <li class="list-group-item"><span>Unlimited Addon Domain</span></li>
-                            <li class="list-group-item"><span>Unlimited Email Account</span></li>
-                            <li class="list-group-item"><span>24/7 Support</span></li>
-                            <li class="list-group-item plan-action"></li>
+        					<li class="list-group-item" th:each="tkb : ${tkb_thu7}">
+								<span th:text="${tkb.getMonhoc_name()}"></span>
+							</li>
                         </ul>
                     </div>
                 </div>
