--- a/src/main/resources/templates/hocsinh_ketquahoctap.html
+++ b/src/main/resources/templates/hocsinh_ketquahoctap.html
@@ -21,7 +21,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/hocsinh/thoikhoabieu">Thời khóa biểu</a></li>
                     <li class="nav-item"><a class="nav-link active" href="">Kết quả học tập</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/hocsinh/quanlytaikhoan">Quản lý tài khoản</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/quanlytaikhoan">Quản lý tài khoản</a></li>
                 </ul>
             </div>
         </div>
