--- a/src/main/resources/templates/hocsinh_thoikhoabieu.html
+++ b/src/main/resources/templates/hocsinh_thoikhoabieu.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-light navbar-expand-md">
 		<div class="container-fluid">
-	        <b class="navbar-brand">Xin chào: <span th:text="${phuhuynh.getHoten()}"></span></b>
+	        <b class="navbar-brand">Xin chào: <span th:text="${hocsinh.getHoten()}"></span></b>
 	        <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
 				<span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
 			</button>
