--- a/src/main/resources/templates/hocsinh_ketquahoctap.html
+++ b/src/main/resources/templates/hocsinh_ketquahoctap.html
@@ -42,10 +42,10 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>Airi Satou</td>
-                                            <td>Accountant</td>
-                                            <td>Tokyo</td>
+                                        <tr th:each="KQHT : ${list_KQHT}">
+                                            <td th:text="${KQHT.getMonHoc_name()}"></td>
+                                            <td th:text="${KQHT.getDiem()}"></td>
+                                            <td th:text="${KQHT.getNhanXet()}"></td>
                                         </tr>
                                     </tbody>
                                 </table>
