--- a/src/main/resources/templates/phuhuynh_thoikhoabieu.html
+++ b/src/main/resources/templates/phuhuynh_thoikhoabieu.html
@@ -21,7 +21,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="">Thời khóa biểu</a></li>
                     <li class="nav-item"><a class="nav-link" href="/hocsinh/ketquahoctap">Kết quả học tập</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/quanlytaikhoan">Quản lý tài khoản</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/quanlytaikhoan/capnhatthongtin">Quản lý tài khoản</a></li>
                 </ul>
             </div>
         </div>
