--- a/src/main/resources/templates/capnhatthongtin.html
+++ b/src/main/resources/templates/capnhatthongtin.html
@@ -21,47 +21,58 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" th:href="${session.linkhome}">Quay lại trang chủ</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="">Cập nhật thông tin</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/quanlytaikhoan/doimatkhau">Đổi mật khẩu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/quanlytaikhoan/dangxuat">Đăng xuất</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="row register-form">
         <div class="col-md-8 offset-md-2">
-            <form class="custom-form">
+            <form class="custom-form" th:action="@{/quanlytaikhoan}" method="post">
                 <h1>Thông tin cá nhân</h1>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label">Họ và tên</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="text"></div>
+                    <div class="col-sm-6 input-column">
+						<input class="form-control" type="text" name = "hoten" th:value="${user.getHoten()}">
+					</div>
                 </div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label">Email </label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="email"></div>
+                    <div class="col-sm-6 input-column">
+						<input class="form-control" type="email" name = "email" th:value="${user.getEmail()}">
+					</div>
                 </div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label">Số điện thoại</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="text"></div>
+                    <div class="col-sm-6 input-column">
+						<input class="form-control" type="text" name = "sdt" th:value="${user.getSdt()}">
+					</div>
                 </div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label">Địa chỉ</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="text"></div>
+                    <div class="col-sm-6 input-column">
+						<input class="form-control" type="text" name = "diachi" th:value="${user.getDiachi()}">
+					</div>
                 </div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label">Ngày sinh</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="date"></div>
+                    <div class="col-sm-6 input-column">
+						<input class="form-control" type="date" name = "ngaysinh" th:value="${user.getNgaysinh()}">
+					</div>
                 </div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label">Giới tính</label></div>
                     <div class="col-sm-6 input-column">
-                        <select class="form-control" id="gender" name="gender">
-					        <option value="nam">Nam</option>
-					        <option value="nu">Nữ</option>
-					        <option value="khac">Khác</option>
+                        <select class="form-control" name="gioitinh">
+					        <option value="1" th:selected="${user.getGioitinh() == 1}">Nam</option>
+					        <option value="2" th:selected="${user.getGioitinh() == 2}">Nữ</option>
+					        <option value="3" th:selected="${user.getGioitinh() == 3}">Khác</option>
 					    </select>
                     </div>
                 </div>
-                <a class="btn btn-light submit-button" type="button">Cập nhật</a>
-                <a href="/quanlytaikhoan/doimatkhau" class="btn btn-light submit-button" type="button">Đổi mật khẩu</a>
-                <a class="btn btn-light submit-button" type="button">Đăng xuất</a>
+                <button class="btn btn-light submit-button" type="submit">Cập nhật</button>
             </form>
         </div>
     </div>
