--- a/src/main/resources/templates/dangxuat.html
+++ b/src/main/resources/templates/dangxuat.html
@@ -22,26 +22,17 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" th:href="${session.linkhome}">Quay lại trang chủ</a></li>
                     <li class="nav-item"><a class="nav-link" href="/quanlytaikhoan/capnhatthongtin">Cập nhật thông tin</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/quanlytaikhoan/doimatkhau">Đổi mật khẩu</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/quanlytaikhoan/dangxuat">Đăng xuất</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/quanlytaikhoan/doimatkhau">Đổi mật khẩu</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/quanlytaikhoan/dangxuat">Đăng xuất</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="row register-form">
         <div class="col-md-8 offset-md-2">
-            <form class="custom-form">
-                <h1>Đổi mật khẩu</h1>
-                <div class="row form-group">
-                    <div class="col-sm-4 label-column"><label class="col-form-label">Mật khẩu cũ</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="text"></div>
-                </div>
-                <div class="row form-group">
-                    <div class="col-sm-4 label-column"><label class="col-form-label">Mật khẩu mới</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="email"></div>
-                </div>               
-                <a class="btn btn-light submit-button" type="button">Đổi mật khẩu</a>
-            </form>
+            <form class="custom-form" th:action="@{/logout}" method="post">
+            	<input type="submit" class="btn btn-light submit-button" value="Đăng xuất"/>
+        	</form>
         </div>
     </div>
     <script th:src="@{/assets/bootstrap/js/bootstrap.min.js}"></script>
