--- a/src/main/resources/templates/capnhatthongtin.html
+++ b/src/main/resources/templates/capnhatthongtin.html
@@ -30,7 +30,7 @@
     </nav>
     <div class="row register-form">
         <div class="col-md-8 offset-md-2">
-            <form class="custom-form" th:action="@{/quanlytaikhoan}" method="post">
+            <form class="custom-form" th:action="@{/quanlytaikhoan/capnhatthongtin}" method="post">
                 <h1>Thông tin cá nhân</h1>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label">Họ và tên</label></div>
