--- a/src/main/resources/templates/doimatkhau.html
+++ b/src/main/resources/templates/doimatkhau.html
@@ -30,17 +30,34 @@
     </nav>
     <div class="row register-form">
         <div class="col-md-8 offset-md-2">
-            <form class="custom-form">
+            <form class="custom-form" th:action="@{/quanlytaikhoan/doimatkhau}" method="post">
                 <h1>Đổi mật khẩu</h1>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label">Mật khẩu cũ</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="text"></div>
-                </div>
+                    <div class="col-sm-6 input-column">
+						<input class="form-control" type="password" name="matkhau_cu">
+						<div th:if="${session.matkhaudung == false}" class="text-danger">
+							Sai mật khẩu
+						</div> 
+					</div>
+					   
+				</div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label">Mật khẩu mới</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="email"></div>
-                </div>               
-                <a class="btn btn-light submit-button" type="button">Đổi mật khẩu</a>
+                    <div class="col-sm-6 input-column">
+						<input class="form-control" type="password" name = "matkhau_moi">
+						<div th:if="${session.matkhaumanh == false}" class="text-danger">
+							Mật khẩu quá yếu
+						</div> 
+					</div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-4 label-column">
+						<label class="col-form-label"><p th:text="${message}"></p></label>
+					</div>
+                    
+                </div>
+                <button class="btn btn-light submit-button" type="submit">Đổi mật khẩu</button>
             </form>
         </div>
     </div>
