--- a/src/main/resources/templates/giaovien_thoikhoabieu.html
+++ b/src/main/resources/templates/giaovien_thoikhoabieu.html
@@ -13,34 +13,20 @@
 <body>
     <nav class="navbar navbar-light navbar-expand-md">
 		<div class="container-fluid">
-	        <b class="navbar-brand">Xin chào: <span th:text="${phuhuynh.getHoten()}"></span></b>
+	        <b class="navbar-brand">Xin chào: <span th:text="${giaovien.getHoten()}"></span></b>
 	        <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
 				<span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
 			</button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="">Thời khóa biểu</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/phuhuynh/ketquahoctap">Kết quả học tập</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/hocsinh/ketquahoctap">Kết quả học tập</a></li>
                     <li class="nav-item"><a class="nav-link" href="/quanlytaikhoan/capnhatthongtin">Quản lý tài khoản</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <ul class="nav nav-tabs">
-        <li class="nav-item" th:each="hocsinh : ${list_hocsinh}">
-			<div th:if="${hocsinh.getHocsinh_id} == ${selected_hsid}">
-				<a class="nav-link active" href="">
-					-<span th:text="${hocsinh.getHoten()}"></span>-
-				</a>
-			</div>
-			<div div th:if="${hocsinh.getHocsinh_id} != ${selected_hsid}">
-				<a class="nav-link" th:href="@{/phuhuynh/thoikhoabieu/{hocsinhId}(hocsinhId=${hocsinh.getHocsinh_id()})}">
-					-<span th:text="${hocsinh.getHoten()}"></span>-
-				</a>
-			</div>
-		</li>
-    </ul>
-    <section class="pricing-table" th:if="${tkb_thu2}">
+    <section class="pricing-table">
         <div class="container">
             <div class="pricing-area text-center">
                 <div class="row">
@@ -50,7 +36,7 @@
                                 <h1>Thứ Hai</h1>
                             </li>
         					<li class="list-group-item" th:each="tkb : ${tkb_thu2}">
-								<span th:text="${tkb.getMonhoc_name()}"></span>
+								<span th:text="${tkb}"></span>
 							</li>
                         </ul>
                     </div>
@@ -60,7 +46,7 @@
                                 <h1>Thứ Ba</h1>
                             </li>
         					<li class="list-group-item" th:each="tkb : ${tkb_thu3}">
-								<span th:text="${tkb.getMonhoc_name()}"></span>
+								<span th:text="${tkb}"></span>
 							</li>
                         </ul>
                     </div>
@@ -70,7 +56,7 @@
                                 <h1>Thứ Tư</h1>
                             </li>
         					<li class="list-group-item" th:each="tkb : ${tkb_thu4}">
-								<span th:text="${tkb.getMonhoc_name()}"></span>
+								<span th:text="${tkb}"></span>
 							</li>
                         </ul>
                     </div>
@@ -80,7 +66,7 @@
                                 <h1>Thứ Năm</h1>
                             </li>
         					<li class="list-group-item" th:each="tkb : ${tkb_thu5}">
-								<span th:text="${tkb.getMonhoc_name()}"></span>
+								<span th:text="${tkb}"></span>
 							</li>
                         </ul>
                     </div>
@@ -90,7 +76,7 @@
                                 <h1>Thứ Sáu</h1>
                             </li>
         					<li class="list-group-item" th:each="tkb : ${tkb_thu6}">
-								<span th:text="${tkb.getMonhoc_name()}"></span>
+								<span th:text="${tkb}"></span>
 							</li>
                         </ul>
                     </div>
@@ -100,7 +86,7 @@
                                 <h1>Thứ Bảy</h1>
                             </li>
         					<li class="list-group-item" th:each="tkb : ${tkb_thu7}">
-								<span th:text="${tkb.getMonhoc_name()}"></span>
+								<span th:text="${tkb}"></span>
 							</li>
                         </ul>
                     </div>
